@@ -1,2 +1,0 @@
-usr/share/boinc/api
-usr/share/boinc/lib
