@@ -1,9 +1,2 @@
 debian/tmp/usr/include/BOINC    usr/include
-RSAEuro/source/librsaeuro.a     usr/lib/boinc/RSAEuro/source
-api/*.a      usr/lib/boinc/api
-api/*.h      usr/include/boinc/api
-client/*.h   usr/include/boinc/client
-db/*.h       usr/include/boinc/db
-lib/*.a      usr/lib/boinc/lib
-lib/*.h      usr/include/boinc/lib
-Makefile.am  usr/share/boinc
+debian/tmp/usr/lib/*            usr/lib
