@@ -1,3 +1,0 @@
-usr/lib/boinc/RSAEuro     usr/share/boinc/RSAEuro
-usr/include/boinc/client  usr/share/boinc/client
-usr/include/boinc/db      usr/share/boinc/db
