@@ -1,2 +1,2 @@
-#debian/tmp/usr/bin/boincmgr     usr/bin
+debian/tmp/usr/bin/boincmgr     usr/bin
 debian/icons/boincmgr-*.xpm     usr/share/pixmaps
